--- a/build.gradle
+++ b/build.gradle
@@ -46,9 +46,10 @@ dependencies {
 
     // db
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    implementation 'com.h2database:h2'
-     implementation 'org.postgresql:postgresql'
-
+    implementation 'com.h2database:h2'
+//     implementation 'org.postgresql:postgresql'
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
     // security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
