--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,11 @@ plugins {
     id "org.jetbrains.kotlin.plugin.allopen" version "1.3.72"
     id "org.jetbrains.kotlin.plugin.spring" version "1.3.72"
     id "org.jetbrains.kotlin.plugin.jpa" version "1.3.72"
-
 }
 
 group = 'com.kmarzecki'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
-
 
 configurations {
 	developmentOnly
@@ -59,7 +57,7 @@ dependencies {
     // security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.72"
-    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.10.+"
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.10.2"
     // web interface
     implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
